better README formatting

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 0.0.1, first public release. coverage limited to SecureJson and deployment-oriented utils.
 0.0.2, added safe_pwgen to utils. actual for-real README this time.
+0.0.2.1, fixed formatting and forgotten details in README.
