--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
-0.0.1, first public release. coverage limited to SecureJson and deployment-oriented utils.
-0.0.2, added safe_pwgen to utils. actual for-real README this time.
-0.0.2.1, fixed formatting and forgotten details in README.
+0.0.1, 3/17/2014 -- first public release. coverage limited to SecureJson and deployment-oriented utils.
+0.0.2, 3/21/2014 -- added safe_pwgen to utils. actual for-real README this time.
+0.0.2.1, 3/21/2014 -- fixed formatting and forgotten details in README.
+0.0.2.2, 3/21/2014 -- critical fix to zeromem (misnamed the function 'zero')
