--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,3 +5,4 @@
 0.1.0, 4/21/2014 -- major overhaul and major features added. SecureConfigParser and SecureString implemented, with cryptkeeper submodule now doing the work of holding the key and doing en/decryption. cryptkeeper_access_methods provide from_key, from_env, and from_file class methods for all SecureConfig* classes.
 0.1.0.1, 4/22/2014 -- Finishing up documentation for 0.1.x
 0.1.0.2, 4/22/2014 -- Documentation bugfix in one of the examples.
+0.1.0.3, 4/27/2014 -- Documentation of SecureString. setup.py now installs all required dependencies.
